추가 내용 공부 필요

--- a/1.md
+++ b/1.md
@@ -43,6 +43,11 @@
   - [UDP Header Format](#udp-header-format)
   - [TCP Header Format](#tcp-header-format)
   - [경로제어 (Routing)](#경로제어-routing)
+- [추가 내용](#추가-내용)
+  - [Policy Routing](#policy-routing)
+  - [IP Masquerade](#ip-masquerade)
+  - [Port Forwarding](#port-forwarding)
+  - [prerouting & postrouting](#prerouting--postrouting)
 
 
 # IP
@@ -650,3 +655,17 @@ slow start는 임계점에 다달았을때 까지만 사용한다.
    - 단점: 사람이 일일히 모두 셋팅 필요
  - dynamic routing: 라우팅 프로토콜을 작동시켜 자동으로 경로 정보를 설정
    - 관리자가 라우팅 프로토콜을 설정해주어야 한다.
+
+
+
+# 추가 내용
+
+해당 챕터는 피드백 이후 추가하는 내용에 대해서 기술한다. 
+
+## Policy Routing
+
+## IP Masquerade
+
+## Port Forwarding
+
+## prerouting & postrouting
