추가 내용 공부 필요

--- a/1.md
+++ b/1.md
@@ -48,6 +48,7 @@
   - [IP Masquerade](#ip-masquerade)
   - [Port Forwarding](#port-forwarding)
   - [prerouting & postrouting](#prerouting--postrouting)
+  - [Question](#question)
 
 
 # IP
@@ -669,3 +670,7 @@ slow start는 임계점에 다달았을때 까지만 사용한다.
 ## Port Forwarding
 
 ## prerouting & postrouting
+
+## Question
+
+ - UDP 프로토콜로 패킷을 쏘면 최초 패킷은 반드시 라우터에서 파기되나요? 사전에 약속관계를 거친 후에 데이터 통신 시점에서는 이미 공유된 MTU 정보를 가지고 UDP 패킷을 만들지 않나 싶어서요
