--- a/1.md
+++ b/1.md
@@ -48,6 +48,8 @@
   - [IP Masquerade](#ip-masquerade)
   - [Port Forwarding](#port-forwarding)
   - [prerouting & postrouting](#prerouting--postrouting)
+    - [iptables](#iptables)
+      - [체인](#체인)
   - [Question](#question)
 
 
@@ -665,11 +667,37 @@ slow start는 임계점에 다달았을때 까지만 사용한다.
 
 ## Policy Routing
 
+- 정책 또는 필터를 기반으로 데이터 패킷을 포워딩 하고 라우팅 하는 기법
+- 목적: 네트워크를 가능한 민첩하게 만드는 것...? 
+- 애플리케이션 특성을 기반으로 라우팅 동작을 정의함으로써 패킷을 포워딩 할 수 있는 유연하고 정밀한 트래픽 처리 기능을 제공
+
 ## IP Masquerade
+
+- 리눅스에서 제공하는 기능으로 하나의 호스트가 다른 호스트의 네트워크를 도와주는 기능.
+- SNAT와 유사한 기능
 
 ## Port Forwarding
 
+- DNAT와 유사한 기능
+
 ## prerouting & postrouting
+
+- PREROUTING: 들어운 트래픽을 다른 호스트나 또는 같은 호스트의 다른 포트로 포워딩할 때 사용.
+- POSTROUTING: 호스트에서 아웃바운드로 나가는 트래픽을 다른 IP나 포트로 포워딩 한다.  
+
+### iptables
+
+ - iptables는 리눅스의 패킷 필터링 도구로서 방화벽 구성이나 NAT에 사용된다.
+ - 패킷 필터링 기능을 사용해 지나가는 패킷의 해더를 보고 그 전체 패킷을 제어할 수 있다.
+ - 특성 조건을 가지고 있는 패킷에 대해 허용과 차단 등을 지정할 수 있으며, 틍정 조건 등을 통해 다양한 방식의 패킷 필터링과 처리 방식을 지원한다. 
+ - 방화벽은 순차적 실행으로, 즉 등록 순서에 있어서 먼저 등록한 부분에 대해서 효력이 유효하기 떄문에 등록시에는 순서가 매우 중요하다. 
+ - 모든 입출력 패킷에 대해 거부하는 설정이 먼저 등록되면 그 이후에 포트를 열어주는 설정을 하여도 효과가 없다. 
+
+#### 체인
+
+ - INPUT: 호스트(서버)로 들어오는 모든 패킷
+ - OUTPUT: 호스트(서버)에서 발생하는 모든 패킷
+ - FORWARD: 호스트(서버)가 목적지가 아닌 모든 패킷, 즉 라우터로 사용되는 호스트 컴퓨터를 통과하는 패킷
 
 ## Question
 
